huddle project was added

--- a/Huddle/huddle.html
+++ b/Huddle/huddle.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huddle</title>
     <link rel="stylesheet" href="huddle.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
 </head>
 
 <body>
     <section id="header">
-        <div class="head row">
-            <div class="logo col-xl-10 col-lg-9 col-md-9 col-sm-8 col-7 col-xxm-7"><a href="#"><img src="logo.svg"
+        <div class="head row ">
+            <div class="logo col-xl-10 col-lg-10 col-md-9 col-sm-8 col-7 col-xxm-7"><a href="#"><img src="logo.svg"
                         alt=""></a>
             </div>
             <div class="logobtn">Try It Free</div>
@@ -26,8 +28,8 @@
                     connections with your users as you engage in genuine discussion.</h6>
                 <div class="headbtn">Get Started For Free</div>
             </div>
-            <div class="img col-xl-6 col-lg-6 col-md-6 col-sm-6 col-10 col-xxm-12"><img src="illustration-mockups.svg"
-                    alt="">
+            <div class="img col-xl-6 col-lg-6 col-md-6 col-sm-6 col-10 col-xm-12 col-xxm-2"><img
+                    src="illustration-mockups.svg" alt="">
             </div>
         </div>
     </section>
@@ -44,16 +46,17 @@
         <div class="row info-com">
             <div class="info-img col-xl-5 col-lg-5"><img src="illustration-flowing-conversation.svg" alt=""></div>
             <div class="info-txt col-xl-6 col-lg-6">
-                <h2>Grow Together</h2>
-                <h6>Generate meaningful discussions with your audience and build a strong,loyal community. Think of the
-                    insightful conversations you miss out on with a feedback form.</h6>
+                <h2>Flowing Conversations</h2>
+                <h6>You wouldn't paginate a conversation in real life,so why do it online? Our threads have just-in-time
+                    loading for a more
+                    natural flow</h6>
             </div>
         </div>
         <div class="row info-com">
             <div class="info-txt col-xl-6 col-lg-6">
-                <h2>Grow Together</h2>
-                <h6>Generate meaningful discussions with your audience and build a strong,loyal community. Think of the
-                    insightful conversations you miss out on with a feedback form.</h6>
+                <h2>your users</h2>
+                <h6>it takes no time at all to integrate Huddle with your app's authentication solution.This means, once
+                    signed in to your app, Your users can start chatting immediately</h6>
             </div>
             <div class="info-img col-xl-5 col-lg-5"><img src="illustration-your-users.svg" alt=""></div>
         </div>
@@ -65,31 +68,41 @@
     </div>
 
     <footer>
-        <div class="logo"><a href="#"><img src="logo.svg" alt=""></a></div>
-        <div class="location">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum asperiores doloremque beatae molestias
-                mollitia
-                officiis, quidem hic rem.</p>
-            <p>+1-543-123-4567</p>
-            <p>example@flyo.com</p>
+        <div class="col beg col-lg-3">
+            <div class="logo"><a href="#"><img src="logo.svg" alt=""></a></div>
+            <p><i class="fas fa-map-marker-alt"></i><span> &nbsp;Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit.
+                    Dolorum asperiores doloremque beatae molestias mollitia officiis, quidem hic rem.</span>
+            </p>
+            <p><i class=" fas fa-phone fa-rotate-90"></i> &nbsp;&nbsp;+1-543-123-4567</p>
+            <p><i class="far fa-envelope-open"></i> &nbsp;&nbsp;example@flyo.com</p>
         </div>
-        <div class="about">
+        <div class="col link col-lg-2">
             <a href="#">About Us</a>
             <a href="#">What We Do</a>
             <a href="#">FAQ</a>
         </div>
-        <div class="career">
+        <div class="col link col-lg-2">
             <a href="#">Career</a>
             <a href="#">Blog</a>
             <a href="#">Contact Us</a>
         </div>
-        <div class="link">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+        <div class="follow col-lg-2">
+            <span class="fa-stack fa-xs">
+                <i class="far fa-circle fa-stack-2x"></i>
+                <i class="fab fa-facebook-f fa-stack-1x"></i>
+            </span>
+            <span class="fa-stack fa-xs">
+                <i class="far fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x"></i>
+            </span>
+            <span class="fa-stack fa-xs">
+                <i class="far fa-circle fa-stack-2x"></i>
+                <i class="fab fa-instagram fa-stack-1x"></i>
+            </span>
         </div>
         <div class="copyright">
-            <p>2023,tech -Ecommerce website</p>
+            <p>&copy Copyright 2018 Huddle,All rights reserved</p>
         </div>
 
     </footer>
