--- a/Huddle/huddle.html
+++ b/Huddle/huddle.html
@@ -28,8 +28,8 @@
                     connections with your users as you engage in genuine discussion.</h6>
                 <div class="headbtn">Get Started For Free</div>
             </div>
-            <div class="img col-xl-6 col-lg-6 col-md-6 col-sm-6 col-10 col-xm-12 col-xxm-2"><img
-                    src="illustration-mockups.svg" alt="">
+            <div class="img col-xl-6 col-lg-6 col-md-6 col-sm-6 col-10 col-xm-12 col-xxm-2">
+                <img src="illustration-mockups.svg" alt="">
             </div>
         </div>
     </section>
